@@ -1,3 +1,6 @@
+* Thu Aug 31 2023 Steven Pritchard <steve@sicura.us> - 0.7.0
+- Add AlmaLinux 8 support
+
 * Mon Jun 12 2023 Michael Riddle <mike@sicura.us> - 0.6.0
 - Add RockyLinux 8 support
 
